# aus-weather-data

./: .gitignore  Pipfile  README.md  analyse.py  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: develop-tests.yml  gh-pages.yml  main-tests.yml  main.yml  main.yml_  tests.yml
aus_weather_data/: __init__.py  constants.py  exceptions.py  models.py
aus_weather_data/core/: logger.py
aus_weather_data/radar/: __init__.py  download.py  frame.py  frame_raw.py  location.py  utils.py
aus_weather_data/radar/analysis/: frame.py  frame_sequence.py  models.py  utils.py
aus_weather_data/radar/common/: __init__.py  analysis_funcs.py  constants.py  file_handling.py  frame.py  frame_base.py  frame_png.py  idr_data.py  location.py  types.py  utils.py
aus_weather_data/radar/local/: __init__.py  file_handling.py
aus_weather_data/radar/remote/: __init__.py  conn.py  download.py  file_handling.py  pool.py  utils.py
aus_weather_data/utils/: funcs.py
docs/: requirements.txt
docs/source/: conf.py  download.rst  examples.rst  index.rst  radar.rst  radar_mod.rst  reference.rst  releasehistory.rst
examples/: Radar Location.ipynb
frames/: IDR023.T.201112250554.bra  IDR023.T.201112250600.bra  IDR023.T.201112250606.bra  IDR023.T.201112250612.bra  IDR023.T.201112250618.bra
profiling/: __init__.py
tests/: constants.py  test_conn.py  test_download.py  test_filename_split.py  test_frame.py  test_location.py  test_matching_files.py  test_png_frame.py  test_radar_locations.py
tests/assets/: IDR024.T.202001312324.b64
(+4 files in other folders)
